--- a/main.html
+++ b/main.html
@@ -1,16 +1,72 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>OTP Verification</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #f5f5f5;
+      flex-direction: column;
+    }
+    h2 {
+      margin-bottom: 10px;
+    }
+    .code-container {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+    }
+    .code {
+      width: 50px;
+      height: 50px;
+      font-size: 24px;
+      text-align: center;
+      border: 2px solid #ccc;
+      border-radius: 5px;
+      outline: none;
+    }
+    .code:focus {
+      border-color: #007BFF;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <h2 id="verification_heading">Verify Your Account</h2>
+  <p id="verification_subtext">Enter the 6-digit code sent to your email or phone.</p>
+  
+  <div class="code-container">
+    <input type="text" class="code" maxlength="1">
+    <input type="text" class="code" maxlength="1">
+    <input type="text" class="code" maxlength="1">
+    <input type="text" class="code" maxlength="1">
+    <input type="text" class="code" maxlength="1">
+    <input type="text" class="code" maxlength="1">
+  </div>
 
+  <script>
+    const codes = document.querySelectorAll('.code');
+    
+    codes.forEach((input, index) => {
+      input.addEventListener('input', (e) => {
+        if (e.target.value) {
+          if (index < codes.length - 1) {
+            codes[index + 1].focus();
+          }
+        }
+      });
+      
+      input.addEventListener('keydown', (e) => {
+        if (e.key === 'Backspace' && !e.target.value && index > 0) {
+          codes[index - 1].focus();
+        }
+      });
+    });
+  </script>
 </body>
-
 </html>
