--- a/main.html
+++ b/main.html
@@ -1,72 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OTP Verification</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #f5f5f5;
-      flex-direction: column;
-    }
-    h2 {
-      margin-bottom: 10px;
-    }
-    .code-container {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-    }
-    .code {
-      width: 50px;
-      height: 50px;
-      font-size: 24px;
-      text-align: center;
-      border: 2px solid #ccc;
-      border-radius: 5px;
-      outline: none;
-    }
-    .code:focus {
-      border-color: #007BFF;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OTP Verification</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h2 id="verification_heading">Verify Your Account</h2>
-  <p id="verification_subtext">Enter the 6-digit code sent to your email or phone.</p>
-  
-  <div class="code-container">
-    <input type="text" class="code" maxlength="1">
-    <input type="text" class="code" maxlength="1">
-    <input type="text" class="code" maxlength="1">
-    <input type="text" class="code" maxlength="1">
-    <input type="text" class="code" maxlength="1">
-    <input type="text" class="code" maxlength="1">
-  </div>
-
-  <script>
-    const codes = document.querySelectorAll('.code');
-    
-    codes.forEach((input, index) => {
-      input.addEventListener('input', (e) => {
-        if (e.target.value) {
-          if (index < codes.length - 1) {
-            codes[index + 1].focus();
-          }
-        }
-      });
-      
-      input.addEventListener('keydown', (e) => {
-        if (e.key === 'Backspace' && !e.target.value && index > 0) {
-          codes[index - 1].focus();
-        }
-      });
-    });
-  </script>
+    <div class="container">
+        <h2 id="verification_heading">Verify Your Account</h2>
+        <p id="verification_subtext">Enter the 6-digit OTP sent to your email or phone.</p>
+        <div class="code-container">
+            <input type="text" id="code-1" class="code" maxlength="1" autofocus>
+            <input type="text" id="code-2" class="code" maxlength="1">
+            <input type="text" id="code-3" class="code" maxlength="1">
+            <input type="text" id="code-4" class="code" maxlength="1">
+            <input type="text" id="code-5" class="code" maxlength="1">
+            <input type="text" id="code-6" class="code" maxlength="1">
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
